Fixed funky resizing in safari. Removed firefox optimalization, because they caused problems when document was too big and they were wrong anyway.
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/trunk@461827 13f79535-47bb-0310-9956-ffa450edef68

--- a/wicket-extensions/src/java/wicket/extensions/ajax/markup/html/modal/res/modal.css
+++ b/wicket-extensions/src/java/wicket/extensions/ajax/markup/html/modal/res/modal.css
@@ -1,5 +1,5 @@
 div.wicket-mask-dark {	
-	position: absolute; 
+	position: fixed;	
 	top: 0px; 
 	left: 0px; 
 	width: 100%; 
@@ -12,7 +12,7 @@ div.wicket-mask-dark {
 }
 
 div.wicket-mask-transparent {
-	position: absolute;	
+	position: fixed;	
 	top: 0px; 
 	left: 0px; 
 	width: 100%; 
@@ -21,9 +21,9 @@ div.wicket-mask-transparent {
 	background-image: url('transparent1.gif');
 }
 
-
 div.wicket-modal {	
-	position: absolute;
+	position: fixed;
+	_position: absolute;
 	z-index: 20001; 
 	visibility: hidden;
 }
@@ -101,6 +101,8 @@ div.wicket-modal div.w_caption {
 	position: relative;
 	background-color: white;
 	cursor: default;
+	line-height: 1.4em;
+	color: #666;
 }
 
 div.wicket-modal a.w_close {	
